[gd_scene load_steps=13 format=3 uid="uid://c74s3lrg2xrxn"]

[ext_resource type="PackedScene" uid="uid://cncdnf1humyeh" path="res://scenes/ps1_psx_knight.glb" id="1_itplb"]
[ext_resource type="Shader" uid="uid://lm1gw4o3cyyh" path="res://shaders/ursc_1.3.0/addons/ursc/spatial/standard_opaque.gdshader" id="3_smgdd"]
[ext_resource type="Texture2D" uid="uid://d3hf1olvks6w6" path="res://scenes/ps1_psx_knight_0.png" id="4_smgdd"]
[ext_resource type="Texture2D" uid="uid://vsb1yucfscvf" path="res://scenes/ps1_psx_knight_1.png" id="5_j1ka6"]
[ext_resource type="Script" uid="uid://dgjqgiw3yw42e" path="res://components/health_component.gd" id="6_oc3hp"]
[ext_resource type="Script" uid="uid://bmlo0cxbepq2r" path="res://components/hit_stop_component.gd" id="9_ey8th"]
[ext_resource type="Script" uid="uid://cyh3kd4813yrx" path="res://components/shake_component.gd" id="10_pvkuu"]
[ext_resource type="Script" uid="uid://8eic4hxs6fnv" path="res://components/dialogue_interact_component.gd" id="12_dc1rr"]
[ext_resource type="AudioStream" uid="uid://cd1hse5aji660" path="res://sfx/vocal_samples/Nonvoice_dialogue.wav" id="13_0fhiq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l4n3p"]
render_priority = 0
shader = ExtResource("3_smgdd")
shader_parameter/albedo_color = Color(0.212305, 0.212305, 0.212305, 1)
shader_parameter/albedo_texture = ExtResource("4_smgdd")
shader_parameter/albedo_texture_as_primary_color = true
shader_parameter/mix_factor = 1.0
shader_parameter/texture_lod_halve_distance_override = 0.0
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_scroll_speed = Vector2(0, 0)
shader_parameter/cull_distance_override = 0.0
shader_parameter/convert_vertex_colors = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fmmry"]
render_priority = 0
shader = ExtResource("3_smgdd")
shader_parameter/albedo_color = Color(1, 0.541241, 0.476759, 1)
shader_parameter/albedo_texture = ExtResource("5_j1ka6")
shader_parameter/albedo_texture_as_primary_color = true
shader_parameter/mix_factor = 1.0
shader_parameter/texture_lod_halve_distance_override = 0.0
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_scroll_speed = Vector2(0, 0)
shader_parameter/cull_distance_override = 0.0
shader_parameter/convert_vertex_colors = false

[sub_resource type="SphereShape3D" id="SphereShape3D_26qbd"]
radius = 1.74561

[node name="knight" instance=ExtResource("1_itplb")]

[node name="Skeleton3D" parent="." index="0"]
bones/6/rotation = Quaternion(-0.796357, 0.0303748, -0.0958102, 0.596417)
bones/7/rotation = Quaternion(0.075161, -0.00813479, 0.0152403, 0.997022)
bones/9/rotation = Quaternion(0.168963, -0.00223285, 0.0249574, 0.985304)
bones/10/rotation = Quaternion(-0.0853173, -0.0180561, 0.0188352, 0.996012)
bones/11/rotation = Quaternion(-0.0396315, -0.0333458, 0.0409912, 0.997816)
bones/13/rotation = Quaternion(0.674769, 0.316558, -0.474345, 0.468482)
bones/14/rotation = Quaternion(0.29081, 0.0353349, 0.181243, 0.938793)
bones/15/rotation = Quaternion(0.00245513, -0.0238327, 0.0933154, 0.995348)
bones/21/rotation = Quaternion(0.151215, 0.0136987, 0.962817, -0.22345)
bones/22/rotation = Quaternion(-0.178323, 0.0780743, 0.0164843, 0.980731)
bones/23/rotation = Quaternion(0.548898, -0.0351395, -0.0886186, 0.830435)
bones/26/rotation = Quaternion(-0.0206431, -0.0842788, 0.993553, -0.0729634)
bones/27/rotation = Quaternion(-0.179271, 0.0870714, 0.0145197, 0.979831)
bones/28/rotation = Quaternion(0.603538, 0.00400533, -0.0785419, 0.793446)

[node name="Object_7" parent="Skeleton3D" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_l4n3p")

[node name="Object_9" parent="Skeleton3D" index="1"]
surface_material_override/0 = SubResource("ShaderMaterial_fmmry")

[node name="AnimationPlayer" parent="." index="1"]
callback_mode_process = 2

[node name="HealthComponent" type="Node3D" parent="." index="2"]
script = ExtResource("6_oc3hp")
max_health = 100.0
metadata/_custom_type_script = "uid://dgjqgiw3yw42e"

[node name="hitstop_component" type="Node" parent="." index="3"]
script = ExtResource("9_ey8th")
metadata/_custom_type_script = "uid://bmlo0cxbepq2r"

[node name="shake_component" type="Node" parent="." index="4" node_paths=PackedStringArray("shake_target")]
script = ExtResource("10_pvkuu")
shake_target = NodePath("..")
metadata/_custom_type_script = "uid://cyh3kd4813yrx"

[node name="physicstimeout" type="Timer" parent="." index="5"]
wait_time = 5.0

[node name="DialogueInteractComponent" type="Area3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15689, 0)
collision_layer = 8
script = ExtResource("12_dc1rr")
dialogue = Array[String](["Hmmm....?", "Art thou among the living? If so... this is no place for your ilk.", "Me...? I don't think that should concern a stranger in the least.", "I am just offering my company to one I once knew."])
dialogue_interact_sound = ExtResource("13_0fhiq")
dialogue_duration = 2.0
metadata/_custom_type_script = "uid://8eic4hxs6fnv"

[node name="CollisionShape3D" type="CollisionShape3D" parent="DialogueInteractComponent" index="0"]
shape = SubResource("SphereShape3D_26qbd")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="died" from="HealthComponent" to="Skeleton3D" method="_on_health_component_died"]
[connection signal="timeout" from="physicstimeout" to="." method="_on_physicstimeout_timeout"]
[connection signal="body_entered" from="DialogueInteractComponent" to="DialogueInteractComponent" method="_on_body_entered"]
[connection signal="body_exited" from="DialogueInteractComponent" to="DialogueInteractComponent" method="_on_body_exited"]
